welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:8: error: type mismatch;
 found   : Unit
 required: Boolean
      if (negative==true & a<0 & b<0)
      ^